--- a/index.html
+++ b/index.html
@@ -1,38 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Datepicker by remi-grumeau</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Datepicker : Lightweight javascript framework-free datepicker" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>Datepicker</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Datepicker</h1>
-        <p>Lightweight javascript framework-free datepicker</p>
-        <p class="view"><a href="https://github.com/remi-grumeau/DatePicker">View the Project on GitHub <small>remi-grumeau/DatePicker</small></a></p>
-        <ul>
-          <li><a href="https://github.com/remi-grumeau/DatePicker/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/remi-grumeau/DatePicker/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/remi-grumeau/DatePicker">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/remi-grumeau/DatePicker">View on GitHub</a>
+
+          <h1 id="project_title">Datepicker</h1>
+          <h2 id="project_tagline">Lightweight javascript framework-free datepicker</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/remi-grumeau/DatePicker/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/remi-grumeau/DatePicker/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="lightweight-javascript-datepicker" class="anchor" href="#lightweight-javascript-datepicker"><span class="octicon octicon-link"></span></a>Lightweight javascript datepicker</h1>
 
 <p><img src="http://remi-grumeau.github.io/DatePicker/images/preview.png" alt="Lightweight javascript datepicker" title="Javascript DatePicker"></p>
 
-<p>This script is a modern browser automatic date picker solution.
+<p>This script is a modern browser automatic date picker solution. 
 No third-party library dependency, IE support is IE8+.</p>
 
 <h1>
@@ -43,18 +47,24 @@ No third-party library dependency, IE support is IE8+.</p>
 
 <p>First, you need to put a table element inside your page which the library can use to generate the calendar.</p>
 
-<div class="highlight highlight-html"><pre><span class="nt">&lt;table</span> <span class="na">id=</span><span class="s">"datepicker"</span> <span class="na">class=</span><span class="s">"dp_calendar"</span> <span class="na">cellpadding=</span><span class="s">"0"</span> <span class="na">cellspacing=</span><span class="s">"0"</span><span class="nt">&gt;&lt;table&gt;</span></pre></div>
+<div class="highlight highlight-html"><pre><span class="nt">&lt;table</span> 
+    <span class="na">id=</span><span class="s">"datepicker"</span> 
+    <span class="na">class=</span><span class="s">"dp_calendar"</span> 
+    <span class="na">cellpadding=</span><span class="s">"0"</span> 
+    <span class="na">cellspacing=</span><span class="s">"0"</span>
+<span class="nt">&gt;&lt;/table&gt;</span>
+</pre></div>
 
 <p>For a given id attribute of 'birthday', you should have</p>
 
 <ul>
 <li>an input text with id equal to 'birthday'</li>
 <li>an onclick event on it to open datepicker</li>
-</ul><div class="highlight highlight-html"><pre><span class="nt">&lt;input</span>
-    <span class="na">type=</span><span class="s">"text"</span>
-    <span class="na">name=</span><span class="s">"date_button"</span>
-    <span class="na">id=</span><span class="s">"date_button"</span>
-    <span class="na">value=</span><span class="s">"2011-06-02"</span>
+</ul><div class="highlight highlight-html"><pre><span class="nt">&lt;input</span> 
+    <span class="na">type=</span><span class="s">"text"</span> 
+    <span class="na">name=</span><span class="s">"date_button"</span> 
+    <span class="na">id=</span><span class="s">"date_button"</span> 
+    <span class="na">value=</span><span class="s">"2011-06-02"</span> 
     <span class="na">onclick=</span><span class="s">"DP.open('date_button')"</span>
 <span class="nt">&gt;</span>
 </pre></div>
@@ -65,19 +75,19 @@ No third-party library dependency, IE support is IE8+.</p>
 <p>You can specify a second parameter to specify the datepicker position. If empty, datepicker use the first parameter (aka element ID value) to get its position.
 It can be an element ID value, a DOM element or a X,Y array.</p>
 
-<div class="highlight highlight-html"><pre><span class="nt">&lt;input</span>
-    <span class="na">type=</span><span class="s">"text"</span>
-    <span class="na">name=</span><span class="s">"date_button"</span>
-    <span class="na">id=</span><span class="s">"date_button"</span>
-    <span class="na">value=</span><span class="s">"2011-06-02"</span>
+<div class="highlight highlight-html"><pre><span class="nt">&lt;input</span> 
+    <span class="na">type=</span><span class="s">"text"</span> 
+    <span class="na">name=</span><span class="s">"date_button"</span> 
+    <span class="na">id=</span><span class="s">"date_button"</span> 
+    <span class="na">value=</span><span class="s">"2011-06-02"</span> 
     <span class="na">onclick=</span><span class="s">"DP.open('date_button','date_button')"</span>
 <span class="nt">&gt;</span>
 
-<span class="nt">&lt;input</span>
-    <span class="na">type=</span><span class="s">"text"</span>
-    <span class="na">name=</span><span class="s">"date_button"</span>
-    <span class="na">id=</span><span class="s">"date_button"</span>
-    <span class="na">value=</span><span class="s">"2011-06-02"</span>
+<span class="nt">&lt;input</span> 
+    <span class="na">type=</span><span class="s">"text"</span> 
+    <span class="na">name=</span><span class="s">"date_button"</span> 
+    <span class="na">id=</span><span class="s">"date_button"</span> 
+    <span class="na">value=</span><span class="s">"2011-06-02"</span> 
     <span class="na">onclick=</span><span class="s">"DP.open('date_button', myDomElement)"</span>
 <span class="nt">&gt;</span>
 
@@ -138,8 +148,66 @@ It can be an element ID value, a DOM element or a X,Y array.</p>
 
 <p>Please note that in this case, it might be a good idea to add onblur events on select to update the hidden input value when a select value changes.</p>
 
+<h3>
+<a name="onchange-event-callback" class="anchor" href="#onchange-event-callback"><span class="octicon octicon-link"></span></a>Onchange event callback</h3>
+
+<p>DatePicker can also trigger a function on</p>
+
+<div class="highlight highlight-html"><pre><span class="nt">&lt;input</span>
+    <span class="na">readonly</span>
+    <span class="na">type=</span><span class="s">"hidden"</span>
+    <span class="na">name=</span><span class="s">"date_callback"</span>
+    <span class="na">id=</span><span class="s">"date_callback"</span>
+    <span class="na">value=</span><span class="s">"2011-06-02"</span>
+    <span class="na">onchange=</span><span class="s">"myFunction(this.value,'date_callback_text')"</span>
+<span class="nt">&gt;</span>
+<span class="nt">&lt;input</span>
+    <span class="na">readonly</span>
+    <span class="na">type=</span><span class="s">"text"</span>
+    <span class="na">id=</span><span class="s">"date_callback_text"</span>
+    <span class="na">value=</span><span class="s">"June 2th, 2011"</span>
+    <span class="na">onclick=</span><span class="s">"DP.open('date_callback','date_callback_text')"</span>
+<span class="nt">&gt;</span>
+
+<span class="nt">&lt;script&gt;</span>
+<span class="kd">function</span> <span class="nx">myFunction</span><span class="p">(</span><span class="nx">val</span><span class="p">,</span> <span class="nx">tid</span><span class="p">)</span> <span class="p">{</span>
+    <span class="nx">DP</span><span class="p">.</span><span class="nx">gbi</span><span class="p">(</span><span class="nx">tid</span><span class="p">).</span><span class="nx">value</span> <span class="o">=</span> <span class="nx">DP</span><span class="p">.</span><span class="nx">toString</span><span class="p">(</span><span class="nx">val</span><span class="p">);</span>
+<span class="p">}</span>
+<span class="nt">&lt;/script&gt;</span>
+</pre></div>
+
 <h2>
-<a name="want-to-contribute" class="anchor" href="#want-to-contribute"><span class="octicon octicon-link"></span></a>Want to contribute</h2>
+<a name="api" class="anchor" href="#api"><span class="octicon octicon-link"></span></a>API</h2>
+
+<h4>
+<a name="dp_locale" class="anchor" href="#dp_locale"><span class="octicon octicon-link"></span></a>DP._locale</h4>
+
+<p>An object contains a "months" array, and a "days" array.
+<code>months[]</code> goes from 0 to 11 as 'January' to 'December', and <code>days[]</code> goes from 0 to 6 as 'Sun' to 'Sat'.</p>
+
+<h4>
+<a name="dpgbieid" class="anchor" href="#dpgbieid"><span class="octicon octicon-link"></span></a>DP.gbi(eid)</h4>
+
+<p>Just a shortcut to <code>document.getElementById</code>.</p>
+
+<h4>
+<a name="dpformatdatedmy" class="anchor" href="#dpformatdatedmy"><span class="octicon octicon-link"></span></a>DP.formatDate(d,m,y)</h4>
+
+<p>A function to return a well formated <code>yyyy-mm-dd</code> string from strings or integers.</p>
+
+<pre><code>ex: DP.formatDate(2,6,1982) ---&gt; "1982-06-02"
+</code></pre>
+
+<h4>
+<a name="dptostringd" class="anchor" href="#dptostringd"><span class="octicon octicon-link"></span></a>DP.toString(d)</h4>
+
+<p>Returns a human friendly date from a well formated <code>yyyy-mm-dd</code> string.</p>
+
+<pre><code>ex: DP.toString('1982-06-02') ---&gt; "June 2th, 1982"
+</code></pre>
+
+<h2>
+<a name="want-to-contribute" class="anchor" href="#want-to-contribute"><span class="octicon octicon-link"></span></a>Want to contribute?</h2>
 
 <p>Any contribution is always welcome.
 As an example, Responsive CSS and multilingual support would be pretty nice contributions :)</p>
@@ -150,11 +218,16 @@ As an example, Responsive CSS and multilingual support would be pretty nice cont
 <p>Thanks to <a href="http://javascriptkit.com/script/script2/dyndateselector.shtml">DtTvB's work</a>, DatePicker really start as a cleanup of it.</p>
       </section>
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/remi-grumeau">remi-grumeau</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Datepicker maintained by <a href="https://github.com/remi-grumeau">remi-grumeau</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
 
   </body>
 </html>
